docs: add live demo links to all README files and update all projects to live status

--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
             </div>
             
             <div class="projects-grid">
-                <div class="project-card coming-soon">
-                    <div class="status-badge status-coming">Coming Soon</div>
+                <div class="project-card">
+                    <div class="status-badge status-live">Live</div>
                     <div class="project-icon">🌐</div>
                     <h3>Enterprise Bug Tracker</h3>
                     <p>Enterprise-grade bug tracking system with NgRx state management, micro-frontend architecture, and advanced security features.</p>
@@ -279,7 +279,7 @@
                         <span class="tech-tag">Micro-Frontend</span>
                         <span class="tech-tag">Security</span>
                     </div>
-                    <a href="#" class="project-link coming-soon">Coming Soon</a>
+                    <a href="/AngularTraining/enterprise/" class="project-link">View Demo</a>
                 </div>
             </div>
         </div>
@@ -310,11 +310,11 @@
                     <div class="status-badge status-live">Live</div>
                     <div class="project-icon">✨</div>
                     <h3>Personal Portfolio v2</h3>
-                    <p>Enhanced portfolio with advanced animations, improved UX, and additional features for better professional presentation.</p>
+                    <p>Enhanced portfolio with PrimeNG components, advanced animations, improved UX, and additional features for better professional presentation.</p>
                     <div class="tech-stack">
-                        <span class="tech-tag">Advanced UI</span>
+                        <span class="tech-tag">PrimeNG</span>
                         <span class="tech-tag">Animations</span>
-                        <span class="tech-tag">PWA</span>
+                        <span class="tech-tag">Advanced UI</span>
                         <span class="tech-tag">Performance</span>
                     </div>
                     <a href="/AngularTraining/portfolio-v2/" class="project-link">View Portfolio v2</a>
@@ -367,7 +367,7 @@
             <br>
             <p><em>"Building the future with Angular excellence"</em> ✨</p>
             <br>
-            <p>🚀 <strong>7 Projects</strong> | 📱 <strong>6 Live Demos</strong> | 🔧 <strong>1 Coming Soon</strong></p>
+            <p>🚀 <strong>7 Projects</strong> | 📱 <strong>7 Live Demos</strong> | ✨ <strong>All Projects Live!</strong></p>
         </div>
     </div>
 </body>
