--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -40,5 +40,5 @@
 <link rel="stylesheet" href="styles-5INURTSO.css"></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-5CFQRCPP.js" type="module"></script><script src="main-7NT4I7PW.js" type="module"></script></body>
+<script src="polyfills-5CFQRCPP.js" type="module"></script><script src="main-AZLJ6XTU.js" type="module"></script></body>
 </html>
