fix: portfolio-v2 images now use relative paths

--- a/portfolio-v2/index.html
+++ b/portfolio-v2/index.html
@@ -40,5 +40,5 @@
 <style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}</style><link rel="stylesheet" href="styles-XLG7VPVQ.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-XLG7VPVQ.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-5CFQRCPP.js" type="module"></script><script src="main-NCGZV4OL.js" type="module"></script></body>
+<script src="polyfills-5CFQRCPP.js" type="module"></script><script src="main-C43F636G.js" type="module"></script></body>
 </html>
