--- a/portfolio-v2/index.html
+++ b/portfolio-v2/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-beasties-container>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Lokeshwaran M - Full Stack Developer Portfolio</title>
@@ -8,7 +8,7 @@
   <meta name="author" content="Lokeshwaran M">
   <base href="/AngularTraining/portfolio-v2/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico?v=3">
+  <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
@@ -37,8 +37,8 @@
     "knowsAbout": ["Java", "Spring Boot", "Angular", "TypeScript", "Machine Learning", "Python"]
   }
   </script>
-<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}</style><link rel="stylesheet" href="styles-XLG7VPVQ.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-XLG7VPVQ.css"></noscript></head>
+<link rel="stylesheet" href="styles.css"></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-5CFQRCPP.js" type="module"></script><script src="main-C43F636G.js" type="module"></script></body>
+<script src="polyfills.js" type="module"></script><script src="main.js" type="module"></script></body>
 </html>
