Add day4p1 Secure Bug Tracker to landing page

--- a/index.html
+++ b/index.html
@@ -257,6 +257,20 @@
                     </div>
                     <a href="/AngularTraining/fullstack-frontend/" class="project-link">View Demo</a>
                 </div>
+                
+                <div class="project-card">
+                    <div class="status-badge status-live">Live</div>
+                    <div class="project-icon">🔐</div>
+                    <h3>Secure Bug Tracker - Day 4</h3>
+                    <p>Advanced bug tracking system with JWT authentication, user registration, secure API integration, and modern UI design.</p>
+                    <div class="tech-stack">
+                        <span class="tech-tag">JWT Security</span>
+                        <span class="tech-tag">User Auth</span>
+                        <span class="tech-tag">PrimeNG</span>
+                        <span class="tech-tag">REST API</span>
+                    </div>
+                    <a href="/AngularTraining/day4p1-app/" class="project-link">View Demo</a>
+                </div>
             </div>
         </div>
         
@@ -367,7 +381,7 @@
             <br>
             <p><em>"Building the future with Angular excellence"</em> ✨</p>
             <br>
-            <p>🚀 <strong>7 Projects</strong> | 📱 <strong>7 Live Demos</strong> | ✨ <strong>All Projects Live!</strong></p>
+            <p>🚀 <strong>8 Projects</strong> | 📱 <strong>8 Live Demos</strong> | ✨ <strong>All Projects Live!</strong></p>
         </div>
     </div>
 </body>
