--- a/day4p1-app/index.html
+++ b/day4p1-app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Day1p1</title>
-  <base href="/">
+  <base href="/AngularTraining/day4p1-app/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/primeng@17.18.9/resources/themes/lara-dark-pink/theme.css">
